Fix de bugs en unskippable y normal
En unskippable usaba una coleccion que no es de ahi y por eso no
generaba los hermanos.
En mujavacontroller, no se le pasaba un incremento de heap a RAC.